--- a/.dockerignore
+++ b/.dockerignore
@@ -1,69 +1,41 @@
-# flyctl launch added from .gitignore
-# Maven
-**\target
+################################################################################
+# Docker build context exclusions
+#
+# Notes:
+# - Use forward slashes (/) so patterns work consistently on Linux builders
+#   (e.g., Railway).
+# - Do NOT ignore `Apps/` because we want to ship import files inside the image.
+################################################################################
+
+# Build output
+target/
 
 # Logs / runtime artifacts
-**\logs
-**\*.log
-**\*.jsonl
-**\*.gz
-**\mcp-stdin.txt
+logs/
+*.log
+*.jsonl
+*.gz
+mcp-stdin.txt
 
-# IDEs / editors
-**\.idea
-**\*.iml
-**\.vscode
-**\.cursor
-
-# OS
-**\.DS_Store
-**\Thumbs.db
-
-# Compiled class files
-**\*.class
-
-# Log files
-**\*.log
-**\logs
-
-# Package Files
-**\*.jar
-**\*.war
-**\*.nar
-**\*.ear
-**\*.zip
-**\*.tar.gz
-**\*.rar
-
-# Maven
-**\target
-**\pom.xml.tag
-**\pom.xml.releaseBackup
-**\pom.xml.versionsBackup
-**\pom.xml.next
-**\release.properties
-**\dependency-reduced-pom.xml
-**\buildNumber.properties
-**\.mvn\timing.properties
-**\.mvn\wrapper\maven-wrapper.jar
-
-# IDE
-**\.idea
-**\*.iws
-**\*.iml
-**\*.ipr
-**\.vscode
-**\.settings
-**\.classpath
-**\.project
-**\.factorypath
+# IDE / editor
+.idea/
+.vscode/
+.cursor/
+*.iml
+*.ipr
+*.iws
+.settings/
+.classpath
+.project
+.factorypath
 
 # OS
-**\.DS_Store
-**\Thumbs.db
+.DS_Store
+Thumbs.db
 
-# Environment
-**\.env
-**\.env.local
+# Env files
+.env
+.env.local
 
+# Fly config is irrelevant for Docker builds on Railway
 fly.toml
